--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/parejas/css/parejas.css">
+    <link rel="stylesheet" href="css/parejas.css">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Parejas</title>
     <script src="parejas.js" async="" type="text/javascript"></script>
